<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_simple"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#E91E63"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_simple"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#9C27B0"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_single_choice"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#3F51B5"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_multi_choice"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#2196F3"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_progress"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>