<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/btn_margin"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            android:text="@string/dialog_wrong_guess_message" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sad_face"
            android:layout_marginBottom="@dimen/btn_margin"/>

        <Button
            android:id="@+id/wrong_guess_hint_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_help_black_24dp"
            android:text="@string/dialog_goto_hints"
            android:textAlignment="gravity"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/wrong_guess_ok_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/dialog_ok"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
