<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_correct_guess_message"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/correct_guess_score"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_margin"
            android:gravity="center_horizontal"
            android:text="Score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/smiling_face"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/correct_guess_youtube_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/youtube_logo"
            android:text="@string/dialog_youtube"
            android:textAlignment="gravity"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/correct_guess_ok_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/dialog_ok"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
